# Hotel_location

./: .gitignore  createsuperuser.py  data.json  pyproject.toml  requirements.txt  tasks.py  tesks.py
main/: admin.py  login.py  models.py  serializers.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_profile.py
root/: settings.py  urls.py
templates/: index.html
